--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "scripts": {
-    "start": "node server/index.js",
-    "start:webhooks": "node scripts/webhook-proxy.js & node server/index.js"
+    "start": "node scripts/webhook-proxy.js & node server/index.js"
   },
   "licenses": [
     {
@@ -11,6 +10,7 @@
   ],
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
