--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "node scripts/webhook-proxy.js & node server/index.js"
+    "start": "node server/index.js",
+    "webhook-server": "node scripts/webhook-proxy.js"
   },
   "licenses": [
     {
@@ -11,7 +12,6 @@
   "dependencies": {
     "axios": "^0.21.1",
     "chalk": "^4.1.0",
-    "color-json": "^2.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "tslog": "^3.0.5"
